// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`c-pattern-extra-infos-attribute-field Renders \`c-pattern-extra-infos-attribute-field\` with custom props 1`] = `
<div
  class="v-input v-text-field v-input--hide-details v-input--is-label-active v-input--is-dirty v-input--is-disabled theme--light"
>
  <div
    class="v-input__control"
  >
    <div
      class="v-input__slot"
    >
      <div
        class="v-text-field__slot"
      >
        <label
          aria-hidden="true"
          class="v-label v-label--active v-label--is-disabled theme--light"
          style="left: 0px; position: absolute;"
        >
          Custom label
        </label>
        <input
          aria-label="Custom label"
          disabled="disabled"
          name="custom_filter_extra_infos_attribute_name"
          type="text"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`c-pattern-extra-infos-attribute-field Renders \`c-pattern-extra-infos-attribute-field\` with custom props 2`] = `undefined`;

exports[`c-pattern-extra-infos-attribute-field Renders \`c-pattern-extra-infos-attribute-field\` with default props 1`] = `
<div
  class="v-input v-text-field v-input--hide-details theme--light"
>
  <div
    class="v-input__control"
  >
    <div
      class="v-input__slot"
    >
      <div
        class="v-text-field__slot"
      >
        <label
          aria-hidden="true"
          class="v-label theme--light"
          style="left: 0px; position: absolute;"
        >
          Field
        </label>
        <input
          aria-label="Field"
          name="extra_infos"
          type="text"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`c-pattern-extra-infos-attribute-field Renders \`c-pattern-extra-infos-attribute-field\` with default props 2`] = `undefined`;
